@@ -6,6 +6,10 @@
 #include <string.h>
 #endif /* HAVE_STRING_H */
 
+#if HAVE_STRINGS_H
+#include <strings.h>
+#endif /* HAVE_STRINGS_H */
+
 #if HAVE_STDLIB_H 
 #include <stdlib.h>
 #endif  /* HAVE_STDLIB_H */
