@@ -1,5 +1,9 @@
 4/14/2006 Bob Rossi <bob@brasko.net>
 
+	* Makefile.am (DIST_SUBDIRS): Added lib.
+
+4/14/2006 Bob Rossi <bob@brasko.net>
+
 	* autorelease.sh: Remove --enable-maintainer-mode.
 	* configure.in (AM_MAINTAINER_MODE): Removed.
 
